introduce edge server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-mtg.imageHost=http://localhost:8081
+server.port=8084
+server.context-path=/mtg-card-catalogue
+mtg.imageHost=http://localhost:8080/mtg-image-server
 mtg.initializeCardsRepositoryOnStartup=false
 mtg.cardInitializer.sourceUrl=https://api.deckbrew.com/mtg/cards
 mtg.cardInitializer.absoluteProjectPath = C:/Users/jbo/IdeaProjects/spring-boot-tutorial
