--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,15 @@
 server:  
   port: 8084
+  context-path: /mtg-card-catalogue
 
-spring:  
-  application:
-    name: mtg-card-catalogue
+mtg:
+  imageHost: http://localhost:8080/mtg-image-server
+  initializeCardsRepositoryOnStartup: false
+  cardInitializer:
+    sourceUrl: https://api.deckbrew.com/mtg/cards
+    absoluteProjectPath: C:/Users/jbo/IdeaProjects/spring-boot-tutorial
+    projectImageDir: /src/main/resources/static
+    webappImageDir: /img/cards
 
 eureka:  
   client:
